Added Bootstrap - Flex Activity

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	</div>
 
 	<!-- Session 10 ACTIVITY -->
-	<div class="container-fluid mt-3 m">
+	<div class="container-fluid mt-3 mb-3">
 		<div class="d-flex">
 			<div class="d-flex justify-content-center flex-sm-wrap w-80">
 				<img src="https://lh3.googleusercontent.com/-4ZXtQ9syHtY/YMBQjzA9G9I/AAAAAAAAA8w/0J-2BeCP4_0EIJNmyjKQv0XRr8mGY5HoACJEEGAsYHg/s0/2021-06-08.png?authuser=0" class="img-fluid">
