Added Boostrap - Flex Activity

--- a/index.html
+++ b/index.html
@@ -62,40 +62,40 @@
 	<!-- Session 10 ACTIVITY -->
 	<div class="container-fluid mt-3 mb-3">
 		<div class="d-flex">
-			<div class="d-flex justify-content-center flex-sm-wrap w-80">
+			<div class="d-flex justify-content-center flex-sm-wrap flex-sm-nowrap w-80">
 				<img src="https://lh3.googleusercontent.com/-4ZXtQ9syHtY/YMBQjzA9G9I/AAAAAAAAA8w/0J-2BeCP4_0EIJNmyjKQv0XRr8mGY5HoACJEEGAsYHg/s0/2021-06-08.png?authuser=0" class="img-fluid">
 			</div>
-			<div class="d-flex justify-content-center flex-sm-wrap w-80">
+			<div class="d-flex justify-content-center flex-sm-wrap flex-sm-nowrap w-80">
 				<img src="https://lh3.googleusercontent.com/-OAW1ZJPdZgw/YMBQgaaee8I/AAAAAAAAA8c/pepYe_0pTEUMNhuDGAl9pRnI_BCmmW8SACJEEGAsYHg/s0/2021-06-08.png?authuser=0" class="img-fluid">
 			</div>			
-			<div class="d-flex justify-content-center flex-sm-wrap w-80">
+			<div class="d-flex justify-content-center flex-sm-wrap flex-sm-nowrap w-80">
 				<img src="https://lh3.googleusercontent.com/-giQYUIskCvE/YMBQkix5ViI/AAAAAAAAA80/4bHUwYgRzLoQvoQYV9hD4fVIP4rOhaMSgCJEEGAsYHg/s0/2021-06-08.png?authuser=0" class="img-fluid">
 			</div>
-			<div class="d-flex justify-content-center flex-sm-wrap w-80">
+			<div class="d-flex justify-content-center flex-sm-wrap flex-sm-nowrap w-80">
 				<img src="https://lh3.googleusercontent.com/-EwOxti3_33k/YMBQlfghbrI/AAAAAAAAA84/NdUQmlJB3RQ8KiOh71GVAiiCwNgYdGb6ACJEEGAsYHg/s0/2021-06-08.png?authuser=0" class="img-fluid">
 			</div>
-			<div class="d-flex justify-content-center flex-sm-wrap w-80">
+			<div class="d-flex justify-content-center flex-sm-wrap flex-sm-nowrap w-80">
 				<img src="https://lh3.googleusercontent.com/-QoJMkmnKLWA/YMBQmOxJUlI/AAAAAAAAA88/k70LYL4QcgIasm3glG1CcYNaQmE7M77zQCJEEGAsYHg/s0/2021-06-08.png?authuser=0" class="img-fluid">
 			</div>
-			<div class="d-flex justify-content-center flex-sm-wrap w-80">
+			<div class="d-flex justify-content-center flex-sm-wrap flex-sm-nowrap w-80">
 				<img src="https://lh3.googleusercontent.com/-I2MVbxOXggE/YMBQhG8xyPI/AAAAAAAAA8g/ROIv4Ir_tuA2yV0H5TwUWpXKVcHMIwTbwCJEEGAsYHg/s0/2021-06-08.png?authuser=0" class="img-fluid">
 			</div>
-			<div class="d-flex justify-content-center flex-sm-wrap w-80">
+			<div class="d-flex justify-content-center flex-sm-wrap flex-sm-nowrap w-80">
 				<img src="https://lh3.googleusercontent.com/-10EjWHqth-U/YMBQns-w1RI/AAAAAAAAA9E/-tFcDgX-X44NF7hgtOnLqwrb4bDZ2sLGACJEEGAsYHg/s0/2021-06-08.png?authuser=0" class="img-fluid">
 			</div>
-			<div class="d-flex justify-content-center flex-sm-wrap w-80">
+			<div class="d-flex justify-content-center flex-sm-wrap flex-sm-nowrap w-80">
 				<img src="https://lh3.googleusercontent.com/-QJ2RI43Ynn4/YMBQjGYb-KI/AAAAAAAAA8s/gqFvFbc_nj0qZLpBgnhPwHXnjzrJm8f9QCJEEGAsYHg/s0/2021-06-08.png?authuser=0" class="img-fluid">
 			</div>
-			<div class="d-flex justify-content-center flex-sm-wrap w-80">
+			<div class="d-flex justify-content-center flex-sm-wrap flex-sm-nowrap w-80">
 				<img src="https://lh3.googleusercontent.com/-GokZxegMQ2Y/YMBQhu6IrTI/AAAAAAAAA8k/D54a9kcpA6ECfCoIXk4KsULnTBYm46ebQCJEEGAsYHg/s0/2021-06-08.png?authuser=0" class="img-fluid">
 			</div>
-			<div class="d-flex justify-content-center flex-sm-wrap w-80">
+			<div class="d-flex justify-content-center flex-sm-wrap  flex-sm-nowrapw-80">
 				<img src="https://lh3.googleusercontent.com/-w8VxVhqWocc/YMBQo8Qpo7I/AAAAAAAAA9M/cGaF-jXJfxEliT0IyduTZw-84njBXD3BACJEEGAsYHg/s0/2021-06-08.png?authuser=0" class="img-fluid">
 			</div>
-			<div class="d-flex justify-content-center flex-sm-wrap w-80">
+			<div class="d-flex justify-content-center flex-sm-wrap flex-sm-nowrap w-80">
 				<img src="https://lh3.googleusercontent.com/-JCiCVRsCbPg/YMBQmm93rmI/AAAAAAAAA9A/WAV3ZhYaLCMqlotrATUeHm26ZXRZBO0AACJEEGAsYHg/s0/2021-06-08.png?authuser=0" class="img-fluid">
 			</div>
-			<div class="d-flex justify-content-center flex-sm-wrap w-80">
+			<div class="d-flex justify-content-center flex-sm-wrap flex-sm-nowrap w-80">
 				<img src="https://lh3.googleusercontent.com/-jGXJKSkpD2Q/YMBQiQEfDsI/AAAAAAAAA8o/HMNZeSWbreUaerbAIVFytegB2TOq55o6wCJEEGAsYHg/s0/2021-06-08.png?authuser=0" class="img-fluid">
 			</div>
 		</div>
