--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-	<title>Bootstrap - Flex Activity</title>
+	<title>Bootstrap - Components Activity</title>
 </head>
 <body>
 	<div class="container-fluid">
@@ -78,6 +78,33 @@
 				<img width="80" src="https://lh3.googleusercontent.com/-D6b4JsjH8vU/YMBQoKjq1RI/AAAAAAAAA9I/wFrHnVIZkXwnGN4h8BqY2jPt6xJNVwEMQCJEEGAsYHg/s0/2021-06-08.png?authuser=0">
 			</div>
 		</div>
+	</div>
+
+	<!-- Session 11 Activity -->
+	<h2 class="text-center">Contact</h2>
+	<div class="container-fluid">
+		<div class="row justify-content-center">
+			<div class="col-md-5 col-sm-12">
+						<form action="/sample-server.com">
+				  		<div class="form-group">
+				    		<label for="fullname">Full Name:</label>
+				    		<input type="text" class="form-control" id="fullname" required>
+				  		</div>
+				  		<div class="form-group">
+				    		<label for="email">Email Address:</label>
+				    		<input type="email" class="form-control" id="email" required>
+				  		</div>
+				  		<div class="form-group">
+				    		<label for="message">Message</label>
+				    		<textarea class="form-control" id="message" rows="3"></textarea>
+				  		</div>
+						</form>
+
+						<button type="submit" class="btn btn-success btn-lg btn-block">Send</button>
+			</div>
+					
+		</div>
+			
 	</div>
 	
 
