--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 	<div class="container-fluid">
 		<div class="row justify-content-center">
 			<div class="col-md-5 col-sm-12">
-						<form action="/sample-server.com">
+						<form action="/sample-server.com" for=>
 				  		<div class="form-group">
 				    		<label for="fullname">Full Name:</label>
 				    		<input type="text" class="form-control" id="fullname" required>
